--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 					<div class="feature-card-content-wallet">
 						<h3 class="feature-card-title-wallet">Linux</h3>
 							<a class="btn btn--gradient-wallet-1" href="https://github.com/BitcoinP0S/bitcoin-pos/releases/download/v0.21.3_final/bitcoin-pos-qt" title="Linux QT wallet">QT wallet</a>
-							<a class="btn btn--gradient-wallet-1" href="https://github.com/BitcoinP0S/bitcoin-pos/releases/download/v0.21.3_final/bitcoin-posd.exe" title="Linux daemon">Daemon</a> 
+							<a class="btn btn--gradient-wallet-1" href="https://github.com/BitcoinP0S/bitcoin-pos/releases/download/v0.21.3_final/bitcoin-posd" title="Linux daemon">Daemon</a> 
 						<p  class="feature-card-desc-wallet">Linux</p>
 
 					</div>
